package de.flowwindustries.flowwttt.domain.enumeration;

/**
 * TTT Roles.
 */
public enum Role {
    INNOCENT, TRAITOR, DETECTIVE
}
