package de.flowwindustries.flowwttt.domain.enumeration;

/**
 * The stages a game instance can be.
 */
public enum Stage {
    LOBBY, COUNTDOWN, GRACE_PERIOD, RUNNING, ENDGAME
}
