@startuml
'https://plantuml.com/class-diagram

class GameMaster {
    start()
    kill()
    setStage()
}
class GameInstance {
    Stage stage
    Map playerRoles
    Player[] activePlayers
    Player[] deadPlayers
}
class RoleService {
    getRandomRole(GameInstance instance)
}
class Arena
class Lobby


enum Stage {
    LOBBY
    PREGAME
    RUNNING
    POSTGAME
}
enum Role {
    INNOCENT
    DETECTIVE
    TRAITOR
}

GameInstance --> RoleService : uses
GameInstance .. Stage
Arena "1" <.. "*" GameInstance : takes place in
Lobby "1" <.. "*" GameInstance : players return and start from
Arena "*" <.. "*" Lobby : has playable
GameMaster *-- GameInstance : manages
RoleService .. Role : supplies random

@enduml